--- a/Section 9 - Dynamic Routes & Advanced Models/views/shop/product-detail.ejs
+++ b/Section 9 - Dynamic Routes & Advanced Models/views/shop/product-detail.ejs
@@ -7,12 +7,10 @@
             <h1><%= product.title %></h1>
             <hr>
             <div>
-              <img src="<%= product.imageUrl %>" alt="<% product.title %>" />
+              <img src="<%= product.imageUrl %>" alt="<% product.title %>" >
             </div>
             <h2><%= product.price %></h2>
             <h2><%= product.description %></h2>
-            <form action="/cart" method="post">
-              <button class="btn" type="submit">Add to Cart</button>
-            </form>
+            <%- include('../includes/add-to-card.ejs') %> 
         </main>
-        <%- include('../includes/end.ejs') %>
+      <%- include('../includes/end.ejs') %>
