--- a/Section 9 - Dynamic Routes & Advanced Models/views/shop/cart.ejs
+++ b/Section 9 - Dynamic Routes & Advanced Models/views/shop/cart.ejs
@@ -8,6 +8,10 @@
                 <ul>
                     <% products.forEach(p => { %>
                         <li><%= p.productData.title %> (<%= p.quantity %>) </li>
+                        <form action="/cart-delete-item" method="POST">
+                            <input type="hidden" value="<%= p.productData.id%>" name="productId">
+                            <button class="btn" type="submit">Delete</button>
+                        </form>
                     <% }) %>
                 </ul>
                 <% } else { %>
