--- a/Section 20 - File Upload & Download/views/admin/edit-product.ejs
+++ b/Section 20 - File Upload & Download/views/admin/edit-product.ejs
@@ -20,7 +20,7 @@
                     id="title"
                     value="<% if (editing || hasError) { %><%= product.title %><% } %>">
             </div>
-            <div class="form-control">
+            <!-- <div class="form-control">
                 <label for="imageUrl">Image URL</label>
                 <input 
                     class="<%= validationErrors.find(error => error.param === 'imageUrl') ? 'invalid' : ''%>"
@@ -28,7 +28,14 @@
                     name="imageUrl"
                     id="imageUrl"
                     value="<% if (editing || hasError) { %><%= product.imageUrl %><% } %>">
-            </div>
+            </div> -->
+            <div class="form-control">
+                <label for="imageUrl">Image</label>
+                <input                     
+                    type="file"
+                    name="image"
+                    id="image">
+            </div> 
             <div class="form-control">
                 <label for="price">Price</label>
                 <input 
